--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,6 +9,7 @@
     }
   ],
   "start_url": "./index.html",
+  //"start_url": "index1.html",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
